# RM26_ROS2PKG

./: .gitignore  AGENTS.md  README.md  aim_log.txt  api  countTime.py  fream.txt  fuck.sh  hik_camera_detection_composition.launch.py  imshow_fuck.sh  incremental_build.sh  int8_quantization_report.md  kill_nodes.sh  launch_motor.sh  launch_test.sh  test_aim.sh  精度文档.md
install/: local_setup.sh  setup.sh
install/ros2_armor_can/share/ros2_armor_can/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_armor_can/share/ros2_armor_can/launch/: test.launch.py
src/recive_pkg/: CMakeLists.txt  NODE.md  main.cpp
src/recive_pkg/include/recive_pkg/: image_subscriber_node.hpp
src/recive_pkg/src/: debug_display_node.cpp  image_subscirber_node.cpp
src/rm_auto_aim/detection/: CMakeLists.txt  NODE.md  README.md  main.cpp  test_aim_node.cpp
src/rm_auto_aim/detection/TimeCounter/: timeCounter.hpp
src/rm_auto_aim/detection/TrackerHeader/: dataType.h
src/rm_auto_aim/detection/include/: armor.hpp  detect.hpp  inference_engine.hpp  openvino_profiler.hpp  performance_logger.hpp  pnp.hpp  traditional_detector.hpp  yolo_detection.hpp
src/rm_auto_aim/detection/model/: armor3_int8.xml  new2.onnx
src/rm_auto_aim/detection/model/IR_MODEL/: 3_int8_new.xml  README.md  new_fp16.xml  new_int8.xml  quantize_layers.py
src/rm_auto_aim/detection/src/: detect.cpp  inference_engine.cpp  openvino_profiler.cpp  pnp.cpp  traditional_detector.cpp  yolo_detection.cpp
src/ros2_armor_can/: CMakeLists.txt  armor_send_node.md  test_send_node.md
src/ros2_armor_can/include/robotcontrol/: bmcan_bus.hpp
src/ros2_armor_can/launch/: motor_all.launch.py
src/ros2_armor_can/lib/: Python┐¬╖ó▒╪╢┴.txt  changelist.txt  ┐¬╖ó╒▀▒╪╢┴README.txt
src/ros2_armor_can/lib/doc/: BMAPI.chm  architecture.puml  readme.md
src/ros2_armor_can/lib/example/bmapi_cyclic_tx_task/: bmapi_cyclic_tx_task  bmapi_cyclic_tx_task.c  run.sh
src/ros2_armor_can/lib/example/bmapi_receive_only/: Makefile  Win32.vcxproj  Win32.vcxproj.filters  bmapi_receive_only.c  bmapi_receive_only.sln  run.sh
src/ros2_armor_can/lib/example/bmapi_test/: bmapi_test.c  bmapi_test.sln
src/ros2_armor_can/lib/example/bmapi_transmit_only/: bmapi_transmit_only  bmapi_transmit_only.c
src/ros2_armor_can/lib/example/can_analyzer_csharp/: BMAPI.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  can_analyzer_csharp.csproj  can_analyzer_csharp.sln
src/ros2_armor_can/lib/example/can_analyzer_csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/ros2_armor_can/lib/example/can_analyzer_csharp/Properties/DataSources/: BMAPI+BM_CanModeTypeDef.datasource
src/ros2_armor_can/lib/example/can_analyzer_labview/: BMAPI.lvlib  ReadMe.txt  bm.h
src/ros2_armor_can/lib/example/can_analyzer_pyqt/: canmsgtablemodel.py  main.py  mycombobox.py  run.bat  widget.py  ╬▐╖¿╘╦╨╨run╞⌠╢»╞≈╟δ▓Θ╘─┤╦╬─╝■.txt
src/ros2_armor_can/lib/example/can_analyzer_qt/: can_analyzer_qt.pro  canmsgtablemodel.cpp  canmsgtablemodel.h  widget.cpp  widget.h  widget.ui
src/ros2_armor_can/lib/example/can_analyzer_vb.net/: BMAPI.vb  MainForm.Designer.vb  MainForm.resx  MainForm.vb
src/ros2_armor_can/lib/example/multichannel_isotp_txrx_cpp/: Win32.vcxproj  Win32.vcxproj.filters  bmapi_test.c
src/ros2_armor_can/lib/example/multichannel_logger/: Makefile  multichannel_logger.c  multichannel_logger.sln  multichannel_logger.vcxproj  multichannel_logger.vcxproj.filters
src/ros2_armor_can/lib/example/multichannel_rx_cpp/: Makefile  Win32.vcxproj  Win32.vcxproj.filters  multichannel_rx_cpp  multichannel_rx_cpp.c  run.sh
src/ros2_armor_can/lib/example/python-can-3.3.4/: ecu_uds_simulator.bat
src/ros2_armor_can/lib/example/python-can-3.3.4/can/interfaces/bmcan/: canlib.py  exceptions.py
src/ros2_armor_can/lib/example/python-can-4.0.0/: ecu_uds_simulator.bat  example.run.bat  example.run.sh  multichannel_bmapi_demo.bat
src/ros2_armor_can/lib/example/python-can-4.0.0/can/: __init__.py  exceptions.py  util.py
src/ros2_armor_can/lib/example/python-can-4.0.0/can/interfaces/bmcan/: bmapi.py
src/ros2_armor_can/lib/example/python-can-4.0.0/can/interfaces/serial/: serial_can.py
src/ros2_armor_can/lib/example/python-can-4.0.0/can/interfaces/socketcan/: socketcan.py
src/ros2_armor_can/lib/example/python-can-4.0.0/can/io/: player.py
src/ros2_armor_can/lib/example/python-can-4.0.0/examples/: advanced_bmapi_demo.py  advanced_isotp_demo.py  crc.py  cyclic.py  cyclic_multiple.py  ecu_uds_simulator.py  multichannel_bmapi_demo.py  receive_all.py  send_multiple.py  send_one.py  serial_com.py  simple_log_converter.py  virtual_can_demo.py
src/ros2_armor_can/lib/example/python-udsoncan-1.13.1/: example.run.sh
src/ros2_armor_can/lib/example/python-udsoncan-1.13.1/examples/: ECU.HEX  download_hex_file.py  write_data_by_identifier.py
src/ros2_armor_can/lib/example/python-udsoncan-1.13.1/test/: run.py  test_connection.py
src/ros2_armor_can/lib/example/python-udsoncan-1.13.1/udsoncan/: client.py  connections.py
src/ros2_armor_can/lib/example/uds_security_dll/: GenerateKeyExImpl.cpp  GenerateKeyExImpl.dsp  GenerateKeyExImpl.sln  GenerateKeyExImpl.vcproj  GenerateKeyExImpl.vcxproj  GenerateKeyExImpl.vcxproj.filters
src/ros2_armor_can/lib/example/x8pi_spi_test/: spitest.c
src/ros2_armor_can/lib/include/: bmapi.h
src/ros2_armor_can/lib/lib/mingw32/: libbmapi.def
src/ros2_armor_can/lib/lib/win32/: BMAPI.lib
src/ros2_armor_can/lib/lib/win64/: BMAPI64.lib
src/ros2_armor_can/scripts/: motor_test.py
src/ros2_armor_can/src/: armor_send.cpp  bmcan_bus.cpp  test.cpp
src/ros2_hik_camera-main/: CMakeLists.txt  NODE.md
src/ros2_hik_camera-main/config/: camera_params.yaml
src/ros2_hik_camera-main/install/: local_setup.sh  setup.sh
src/ros2_hik_camera-main/install/hik_camera/lib/hik_camera/: hik_camera_node
src/ros2_hik_camera-main/install/hik_camera/share/hik_camera/: local_setup.sh  package.sh
src/ros2_hik_camera-main/log/: latest_build
src/ros2_hik_camera-main/src/: hik_camera_node.cpp
(+20 files in other folders)
