<?xml version="1.0"?>
<package format="2">
  <name>ros2_armor_can</name>
  <version>0.1.0</version>
  <description>自瞄与电机 CAN 通信 ROS2 节点</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
